fixed presskit toc on mobile

--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -71,6 +71,10 @@
 			margin-bottom: 0px;
 			padding: 0px;
 			border: none;
+			
+			float: none;
+			position: relative;
+			display: block;
 			p.toc_title{
 				display: none;
 			}
